# python-experiments

./: .coveragerc  LICENSE  README.md  bototest.py  dataThings.py  hashTable.py  pyproject.toml  setup.py  testLogs.py  testTime.py
.github/workflows/: release.yml
data/: data_file
patterns/factory/: adaptor.py  factory.py
patterns/regex/: main.py
src/ds/: stack.py
src/examples/: fun_with_time.py  testTime.py
src/patterns/factory/: adaptor.py
src/py_ex/: ex_dataclass.py
src/slackApp/: delete_message.py  list_scheduled.py  send_message.py
tdd/: .coverage
tdd/ds/: .coverage  .coveragerc  README.md
tdd/ds/ds/: stack.py
tdd/ds/tests/: test_stack.py
tests/: test_dataThings.py  test_testTime.py
